--- a/style/style.css
+++ b/style/style.css
@@ -353,3 +353,87 @@
 }
 
 /*reservation*/
+
+.reservation{
+    height: 1000px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#reserve-burger{
+    width: 170px;
+    height: 170px;
+}
+
+#reserve-bottle{
+    width: 90px;
+    height: 300px;
+    position: absolute;
+    right: 0;
+    top: 200px;
+}
+
+#reserve-plate{
+    width: 270px;
+    height: 270px;
+    position: absolute;
+    right: 0px;
+    top: 200px;
+    overflow: hidden;
+}
+
+.reservation-main{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    width: 720px;
+    height: 400px;
+
+    h3{
+        font: 700 29px "Bebas Neue";
+        color: #3d2514;
+    }
+
+    h1{
+        font: 400 50px "Alfa Slab One";
+        color: #3d2514;
+    }
+}
+
+.reservation-inputs{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    
+    input, a{
+        width: 300px;
+        padding: 15px;
+        margin-bottom: 20px;
+        border-radius: 5px;
+    }
+
+    
+
+    a{
+        background-color: #bf2222;
+        font: 400 18px "Alfa Slab One";
+        color: #fff;
+        text-decoration: none;
+        width: 304px;
+    }
+}
+
+.reservation-left{
+    position: relative;
+    height: 500px;
+}
+
+.reservation-right{
+    position: relative;
+}
+
+/*footer*/
