--- a/style/style.css
+++ b/style/style.css
@@ -437,3 +437,23 @@
 }
 
 /*footer*/
+
+/*footer{
+    background: url("../img/footer-bg.png") center/cover;
+    height: 500px;
+    margin-bottom: 20px;
+}
+
+#footer-logo{
+    width: 300px;
+    height: 70px;
+    color: #fff;
+}
+
+.footer-text{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 250px;
+    align-items: center;
+}*/
